fix: redo unit tests and remove paperweight making MockBukkit unusable